# sanntid

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-Hellspark-Surface.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
CAD files/: camera ring.3mf
CAD files/STEP/: 750-0999-001 Rev2 - 1x Pitch Truss.STEP  750-0999-002 Rev2 - 2x Pitch Truss.STEP  750-0999-046 Rev2 - 1x1 Connector.STEP  750-0999-047 Rev2 - 1x Lock Connector.STEP  750-0999-048 Rev3 - 1x Bearing Connector.STEP  750-0999-049 Rev2 - 1x Lock Turntable (Twisty).STEP  750-0999-050 Rev2 - 1x Lock Turntable Outer Half.STEP  750-0999-051 Rev3 - 1x Lock Turntable Inner Half.STEP  750-0999-052 Rev2 - 1x Lock Hinge (Bendy).STEP  750-0999-053 Rev2 - 1x Lock Hinge Outer Half.STEP  750-0999-054 Rev2 - 1x Lock Hinge Inner Half.STEP  750-0999-061 Rev2 - 3x Pitch (75mm) Shaft.STEP  750-0999-062 Rev2 - 4x Pitch (100mm) Shaft.STEP  750-0999-063 Rev2 - 5x Pitch (125mm) Shaft.STEP  750-0999-064 Rev2 - 6x Pitch (150mm) Shaft.STEP  750-0999-065 Rev5 - 0.5x Pitch Shaft Collar.STEP  750-0999-066 Rev3 - 0.25x Pitch Shaft Collar.STEP  750-0999-069 Rev2 - 30mm Pulley.STEP  750-0999-070 Rev2 - 45mm Pulley.STEP  750-0999-071 Rev3 - 90mm Pulley.STEP  750-0999-072 Rev11 - Hand Crank.STEP  750-0999-073 Rev1 - 10mm Rubber Tire.STEP  750-0999-074 Rev2 - Lead Screw.STEP  750-0999-075 Rev3 - Lead Screw Nut.STEP  750-0999-087 Rev1 - Linear Motion Bracket.STEP  750-0999-091 Rev1 - 1x2 Plate.STEP  750-0999-093 Rev1 - 1x4 Plate.STEP  750-0999-113 Rev1 - 2x2 45 Degree Angle Plate.STEP  750-0999-119 Rev1 - 2x2 90 Degree Angle Plate.STEP  750-0999-122 Rev1 - 3x3 90 Degree Angle Plate.STEP  750-0999-125 Rev1 - 2x3 Tee Plate.STEP  750-0999-128 Rev1 - 3x3 Plus Plate.STEP  750-0999-131 Rev2 - Rope Clamp.STEP  750-0999-132 Rev1 - Removal Tool.STEP  750-0999-135 Rev1 - 1x Pitch (25g) Weighted Truss.STEP
Include/: CommandSender.hpp  FrameReceiver.hpp  RobotController.hpp  SensorDataReceiver.hpp
Python/: App.py  Cam_client_test.py  controller.py  formattest.py  iphandover.py  main.py  rc.local  sensortester.py  webcamTest.py
Tests/: CMakeLists.txt  testConnection.cpp  tester.cpp
UI/: UI_test.cpp  cvui.h
src/: CMakeLists.txt  CommandSender.cpp  FrameReceiver.cpp  RobotController.cpp  SensorDataReceiver.cpp
